# TMESplit

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md
.github/workflows/: check.yml
R/: AllClasses.R  AllGenerics.R  accessors.R  aggregateToComposition.R  basilisk.R  palette.R  plotting.R  show.R  tmesplit-methods.R  zzz.R
inst/extdata/: toy_composition.rds
inst/python/tmesplitpy/: LICENSE  README.md  pyproject.toml
inst/python/tmesplitpy/src/tmesplit/: __init__.py  _batch.py  _constants.py  _core.py  _evaluation.py  _matching.py  _nmf.py  _testing.py  model.py
inst/python/tmesplitpy/src/tmesplit/pl/: __init__.py  _activities.py  _common.py  _network.py  _programs.py  _significance.py
inst/python/tmesplitpy/src/tmesplit/pp/: __init__.py  _aggregate.py
man/: TMESplitResult-class.Rd  aggregateToComposition.Rd  hFractions.Rd  plotActivities.Rd  plotNetwork.Rd  plotPrograms.Rd  plotSampleHeatmap.Rd  plotSignificance.Rd  programs.Rd  pvalue.Rd  show-TMESplitResult-method.Rd  tme_diverging.Rd  tme_palette.Rd  tmesplit.Rd  wShared.Rd  wSpecific.Rd
tests/: testthat.R
tests/testthat/: helper-mock.R  test-aggregate.R  test-integration.R  test-plots.R  test-scaffold.R  test-unit.R
vignettes/: TMESplit-analysis.Rmd  TMESplit-quickstart.Rmd
