[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmesplitpy"
dynamic = ["version"]
description = "Tumor MicroEnvironment Split: formal testing of group-specific multicellular coordination programs from cell-type compositions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Kate Petrenko" }]
keywords = [
    "single-cell",
    "tumor-microenvironment",
    "NMF",
    "differential-composition",
    "ecotypes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "anndata>=0.10",
    "numba>=0.58",
    "joblib>=1.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7", "seaborn>=0.13"]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme",
    "myst-parser>=1.1,<4",
    "myst-nb>=1.1,<2",
    "sphinx-autodoc-typehints",
    "ipykernel",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "build",
    "twine",
]
all = ["tmesplitpy[plot,docs,dev]"]

[project.urls]
Homepage = "https://github.com/petrenkokate/TMESplitpy"
Repository = "https://github.com/petrenkokate/TMESplitpy"
Documentation = "https://tmesplitpy.readthedocs.io"
Issues = "https://github.com/petrenkokate/TMESplitpy/issues"

[tool.hatch.version]
path = "src/tmesplit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tmesplit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tmesplit",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=tmesplit --cov-report=term-missing"
markers = [
    "slow: requires toy_demo fixture or long-running (~3 min)",
]

[tool.coverage.run]
source = ["src/tmesplit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501", "E702", "E741", "B007"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
